# albert

./: .gitmodules  CMakeLists.txt  README.md
cmake/: Findarabica.cmake  Findjsoncpp.cmake
parsers/: ah_index_parser.hpp
src/: main.cpp  product.hpp  scraper.cpp  scraper.hpp
src/albert/: CMakeLists.txt  interpreter.hpp  main.cpp  page.hpp  scraper.cpp  scraper.hpp  util.hpp
src/albert/parsers/: category_parser.hpp  horizontalfilter_parser.hpp  product_parser.hpp  subcategory_parser.hpp
src/parsers/: ah_recipe_parser.hpp  category_listing_parser.hpp  category_parser.hpp  product_parser.hpp  subcategory_parser.hpp
src/prototype/: CMakeLists.txt  main.cpp
src/util/: downloader.cpp  downloader.hpp  html_watcher.hpp  util.hpp
util/: html_parser.cpp  html_parser.hpp  html_recorder.hpp
